--- a/css/main.css
+++ b/css/main.css
@@ -73,7 +73,7 @@
 .inner {
   background-color: #f5f2e8;
   /* opacity: 0.2; */
-  height: inherit;
+  /* height: inherit; */
   margin: auto;
   width: 100%;
   max-width: var(--layout);
@@ -84,7 +84,7 @@
 }
 header {
   width: 100%;
-  height: 170rem;
+  height: 148rem;
 }
 .gnb {
   margin: auto;
@@ -131,9 +131,7 @@ header {
 .gnb .inner .menu .main_menu {
   position: relative;
 }
-span {
-  display: block;
-}
+
 .gnb .inner .menu .show_onlist {
   display: none;
 }
@@ -393,7 +391,6 @@ main {
   padding-top: 19rem;
   width: 100%;
   flex-direction: column;
-  row-gap: 30rem;
   z-index: 1;
   background-color: var(--gray_5);
 }
@@ -405,7 +402,6 @@ section {
   width: 100%;
   max-width: var(--layout);
   margin: auto;
-  height: 45.7rem;
 }
 .works_warp {
   height: inherit;
@@ -415,12 +411,15 @@ section {
   width: 100%;
   height: 100%;
   margin: auto;
-  background-color: #cecaca;
 }
 main .detail_warp .warp_inner {
   width: 100%;
   margin: auto;
   justify-content: space-between;
+}
+main .detail_warp section {
+  margin: 0 auto 260px;
+  box-sizing: border-box;
 }
 main .detail_warp .warp_inner .s_d_mark {
   font-size: 1.8rem;
@@ -435,6 +434,9 @@ main .detail_warp .warp_inner .s_d_mark {
   padding: 0 2.2rem;
   display: inline-block;
 }
+main .detail_warp .warp_inner .text_box {
+  width: 100%;
+}
 main .detail_warp .warp_inner a {
   font-size: 4.6rem;
   font-weight: bold;
@@ -445,20 +447,20 @@ main .detail_warp .warp_inner h5 {
   font-size: 2.6rem;
   font-weight: 600;
   color: var(--pr_50);
-  margin-top: 2rem;
+  margin-top: 3rem;
   letter-spacing: -0.2rem;
 }
 main .detail_warp .warp_inner .warp_text {
   font-size: 1.8rem;
   font-weight: 400;
-  margin-top: 1.2rem;
+  margin-top: 1.5rem;
   color: var(--gray_60);
 }
 main .detail_warp .warp_inner .warp_btn_tit {
   font-size: 2rem;
-  font-weight: 500;
+  font-weight: 600;
   color: var(--gray_60);
-  margin-top: 3.5rem;
+  margin-top: 5rem;
   margin-bottom: 1.6rem;
 }
 main .detail_warp .warp_inner .btn_link_box {
@@ -471,6 +473,7 @@ main .detail_warp .warp_inner .btn_link_box {
   align-items: center;
   margin-top: 0.8rem;
   padding: 0 3rem;
+  box-sizing: border-box;
 }
 main .detail_warp .warp_inner .btn_link_box .f_text {
   font-size: 2rem;
@@ -492,22 +495,190 @@ main .detail_warp .warp_inner .btn_link_box .details_view {
   border-radius: 6px;
   color: var(--pr_50);
   font-size: 1.6rem;
-  font-weight: 500;
+  font-weight: 00;
   line-height: 4.6rem;
   text-align: center;
+}
+main .detail_warp .warp_inner .imgbox {
+  position: relative;
+  margin: 0;
 }
 main .detail_warp .warp_inner img {
   position: relative;
   max-width: 58rem;
-  top: 0rem;
+  top: 5rem;
   display: block;
   margin-left: auto;
+}
+main .detail_warp .warp_inner .imgbox img.atscrmgif {
+  max-width: 39rem;
+  top: -5rem;
+  right: -8rem;
+  box-sizing: border-box;
+  border-radius: 12px;
+  border: 15px solid #f4f2f6;
+}
+main .detail_warp .warp_inner .green .s_d_mark {
+  color: var(--se_50);
+  border: 1px solid var(--se_40);
+  background: var(--se_20);
+}
+main .detail_warp .warp_inner.green h5 {
+  color: var(--se_50);
+}
+main .detail_warp .warp_inner.green .btn_link_box .details_view {
+  border: 1px solid var(--se_50);
+  color: var(--se_50);
+}
+main .detail_warp .warp_inner.green {
+  display: flex;
+  flex-direction: row-reverse;
+}
+main .detail_warp .warp_inner.green img.assess {
+  border-radius: 12px;
+  border: 20px solid var(--se_40);
+}
+main .detail_warp .warp_inner.green .imgbox img.assessgif {
+  max-width: 43.2rem;
+  top: -5rem;
+  right: -8rem;
+  box-sizing: border-box;
+}
+main .detail_warp .warp_inner.green .text_box {
+  width: 100%;
+  margin-left: 20rem;
+  box-sizing: border-box;
+}
+main .detail_warp .warp_inner.green img.interview {
+  max-width: 66rem;
+}
+main .detail_warp .warp_inner.green img.proctor {
+  border-style: none;
+  max-width: 67.9rem;
+}
+main .detail_warp .warp_inner.green img.reference {
+  max-width: 67.9rem;
+}
+/* ====================================
+    ============== comment ===============    
+==================================== */
+main .works_warp {
+  width: 100%;
+  background: var(--pr_20);
+}
+main .works_warp .width_inner {
+  width: 100%;
+  max-width: var(--layout);
+  flex-direction: row;
+  align-items: center;
+  margin: auto;
+  padding: 110px 0;
+}
+main .works_warp .width_inner .widthworks_text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+main .works_warp .width_inner .widthworks_text h3 {
+  font-size: 5rem;
+  font-weight: 600;
+  color: var(--gray_60);
+}
+main .works_warp .width_inner .widthworks_text p {
+  font-size: 2rem;
+  margin-top: 1rem;
+  font-weight: 500;
+  color: var(--gray_60);
+}
+main .works_warp .width_inner .widthworks_text p .tit_blue {
+  color: var(--pr_50);
+}
+main .works_warp .width_inner .logo_slide {
+  margin-top: 5rem;
+}
+main .works_warp .width_inner .logo_slide ul {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 15px 15px;
+  box-sizing: border-box;
+}
+main .works_warp .width_inner .logo_slide ul li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #deecff;
+  background: #fff;
+  align-items: center;
+  width: 100%;
+  max-width: 24rem;
+  height: 10rem;
+  border-radius: 6px;
+  justify-content: center;
+  box-sizing: border-box;
+}
+main .works_warp .width_inner .logo_slide ul li img {
+  max-width: 100%;
+}
+main .experience_wrap{
+  width: 100%;
+  padding: 10rem 0;
+}
+main .experience_wrap .max_inner {
+  width: 100%;
+  height: auto;
+  max-width: var(--layout);
+  margin: auto;
+  flex-direction: column;
+  align-items: center;
+}
+main .experience_wrap .max_inner .experience_tit h3{
+  font-size: 4rem;
+  font-weight: 600;
+  color: var(--gray_60);
+  text-align: center;
+}
+main .experience_wrap .max_inner .experience_tit .tit_blue{
+  color: var(--pr_50);
+}
+main .experience_wrap .max_inner .experience_tit p{
+  font-size: 2rem;
+  font-weight: 500;
+  text-align: center;
+  color: var(--gray_60);
+  margin-top: 4rem;
+}
+main .experience_wrap .max_inner .experience_btn{
+  width: 100%;
+  max-width: 53rem;
+  justify-content: space-between;
+  margin-top: 3rem;
+}
+main .experience_wrap .max_inner .experience_btn .button.ghost_white {
+  height: 6rem;
+  line-height: 6rem;
+  padding: 0 4rem;
+  max-width: 26rem;
+  color: var(--pr_50);
+  border: 1px solid var(--pr_50);
+  border-radius: 0.6rem;
+  font-size: 1.8rem;
+}
+main .experience_wrap .max_inner .experience_btn .button.ghost_blue {
+  height: 6rem;
+  line-height: 6rem;
+  padding: 0 4rem;
+  max-width: 26rem;
+  color: var(--gray_5);
+  border: 1px solid var(--pr_50);
+  background-color: var(--pr_50);
+  border-radius: 0.6rem;
+  font-size: 1.8rem;
 }
 /* ====================================
     ============== footer ===============    
 ==================================== */
 footer {
-  padding-top: 19rem;
   z-index: 1;
   height: 20rem;
   width: 100%;
